# shard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
shard/: __init__.py  cli.py  config.py  models.py  models_cache.py  runner.py  search.py  vault.py
shard/pipeline/: __init__.py  extractor.py  formatter.py  indexer.py  learner.py  linker.py
shard/ui/: status.py
tests/: conftest.py  test_bug_fixes.py  test_cli.py  test_config.py  test_extractor.py  test_formatter.py  test_indexer.py  test_learner.py  test_linker.py  test_model.py  test_status.py  test_sync.py  test_vault.py
